# learningcpp

./: .gitignore  LICENSE  binary_and_log.mcdx  examples.txt  misc.txt  mod.txt  windows-cmd-tricks.txt  wisdom.odt  wisdom.txt
2d-plot/: CMakeLists.txt  main.cpp
RWBY-text-adventure/: CMakeLists.txt  adventure-manager.hpp  main.cpp  player.hpp  random.hpp
arrays/: CMakeLists.txt  angry-white-wrapper.hpp  main.cpp  std-container-examples.hpp  test.hpp  util.hpp
board-game/: CMakeLists.txt  animation-player.cpp  animation-player.hpp  bloom-shader.hpp  board-game.cpp  board-game.hpp  board.cpp  board.hpp  check-macros.hpp  collider.hpp  context.hpp  display-constants.cpp  display-constants.hpp  entity.hpp  game-coordinator.cpp  game-coordinator.hpp  keys.hpp  main.cpp  map.cpp  map.hpp  meth-head.cpp  meth-head.hpp  pieces.cpp  pieces.hpp  player.cpp  player.hpp  resources.cpp  resources.hpp  scoped-board-position.cpp  scoped-board-position.hpp  settings.cpp  settings.hpp  sound-player.cpp  sound-player.hpp  states.cpp  states.hpp  tile-image.hpp  types.hpp  util.hpp
bullet-hell/: CMakeLists.txt  game.cpp  game.hpp  main.cpp  textureholder.hpp
castle-crawl/: context.hpp  door.cpp  door.hpp  game-coordinator.cpp  game-coordinator.hpp  main.cpp  map-types.hpp  map.cpp  map.hpp  pieces.cpp  pieces.hpp  player.cpp  player.hpp  settings.cpp  settings.hpp  tile-image.hpp
castle-crawl/doc/: design.txt
castle-crawl/src/: animation-player.cpp  board.cpp  board.hpp  check-macros.hpp  context.cpp  context.hpp  door.cpp  door.hpp  frames-per-sec.cpp  game-coordinator.cpp  game-coordinator.hpp  main.cpp  map-types.hpp  map.cpp  map.hpp  maps.cpp  pieces.cpp  pieces.hpp  player-piece.cpp  player-piece.hpp  player.cpp  player.hpp  resources.cpp  resources.hpp  settings.cpp  settings.hpp  sound-player.cpp  sound-player.hpp  splash-coordinator.cpp  splash-coordinator.hpp  state-machine.cpp  state-play.cpp  state-play.hpp  state-splash.cpp  state-splash.hpp  states.hpp  tile-image.hpp  util.hpp
color-range/: CMakeLists.txt  color-names.hpp  color-range.hpp  main.cpp  random.hpp  sf-resolutions.hpp  util.hpp
color-tests/: CMakeLists.txt  color-palletes.hpp  main.cpp
cyoa-game/: CMakeLists.txt  main.cpp
doc/: .~lock.wisdom.odt#  data-perspective.txt  game-idea.txt  lessons.odt  math.odt  misc.txt  software-licences.txt  wisdom.odt
examples/: CMakeLists.txt  main.cpp  nested-for.hpp  strings.hpp  two-dimm-arrays-and-nested-for-loops.hpp  vector-capacity.hpp
file-util/: CMakeLists.txt  main.cpp
lessons/file-fixer/: CMakeLists.txt  ascii.cpp  ascii.hpp  extension-fixer-1.cpp  extension-fixer-1.hpp  extension-fixer-2.cpp  extension-fixer-2.hpp  extension-fixer.cpp  extension-fixer.hpp  filesys.cpp  filesys.hpp  main.cpp  util-ascii.hpp  util.hpp
lessons/file-io/: CMakeLists.txt  main.cpp
lights-out/: CMakeLists.txt  cell-model.hpp  cell-view.cpp  cell-view.hpp  cell.hpp  game-board-model.cpp  game-board-model.hpp  game-board-view-basic.hpp  game-board-view-fade.cpp  game-board-view-fade.hpp  game-board.cpp  game-board.hpp  game-controller.cpp  game-controller.hpp  game-state-enum.hpp  game.cpp  game.hpp  main.cpp  random.hpp  screen-util.hpp  todo.txt  window.cpp  window.hpp
mario/: CMakeLists.txt  context.cpp  context.hpp  game-object.cpp  game-object.hpp  image.hpp  main.cpp  map.hpp  mover.hpp  random.hpp  sfx.hpp  util.hpp
media/image/: black-and-white-small-svg-game-icons.7z
media/text/: Alice'sAdventuresInWonderland.7z  Bible.7z  CompleteWorksOfWilliamShakespeare.7z  dd-monsters-only-first-100.7z  dd-monsters.7z  edgar-allan-poe--complete-works.7z  monsters.7z  names-cities.txt  names-city.txt  names-class.txt  names-college-courses.txt  names-person-first-female.txt  names-person-first-male.txt  (+3 more)
meth-heads/: CMakeLists.txt  animation-player.cpp  animation-player.hpp  animation.cpp  animation.hpp  audio.hpp  cell-content.hpp  cell-position.hpp  cell.cpp  cell.hpp  display-constants.cpp  display-constants.hpp  display-variables.cpp  display-variables.hpp  enums.hpp  error-handling.hpp  main.cpp  meth-head-enum.hpp  meth-head.cpp  meth-head.hpp  nameof.hpp  pos-ref-counter.cpp  pos-ref-counter.hpp  position-cache.hpp  random.hpp  scoped-board-pos-handler.cpp  scoped-board-pos-handler.hpp  scoped-board-position.cpp  scoped-board-position.hpp  score.cpp  score.hpp  settings.hpp  sim-context.cpp  sim-context.hpp  simulator.cpp  simulator.hpp  sound-player.cpp  sound-player.hpp  utils.hpp
monsters/: CMakeLists.txt  main.cpp  monsters.7z
particles/: CMakeLists.txt  main.cpp
race-math/: CMakeLists.txt  main.cpp
random-test/: CMakeLists.txt
school/: Address.cpp  Address.hpp  CMakeLists.txt  Class.cpp  Class.hpp  Date.cpp  Date.hpp  Employee.cpp  Employee.hpp  PersonName.cpp  PersonName.hpp  Source.cpp  TimeDuration.cpp  TimeDuration.hpp  TimeOfDay.cpp  TimeOfDay.hpp  ascii.hpp  file-io.hpp  iterator.hpp  main.cpp  random.hpp  working-with-containers.hpp
screen/: CMakeLists.txt  bloom-shader.hpp  main.cpp  slider-base.hpp  slider-color.hpp  slider-position.hpp  sliders.hpp
screen2/: CMakeLists.txt  main.cpp  sliders.hpp
screen3/: CMakeLists.txt  bloom-shader.hpp  main.cpp  slider-position.hpp  sliders.hpp
screen4/: CMakeLists.txt  color-range.hpp  main.cpp  slider-color.hpp  sliders-sfml.hpp  sliders.hpp
sfmltests/: CMakeLists.txt  bouncer.cpp
shaders/: CMakeLists.txt  main.cpp
simple-effects/: .clang-format  CMakeLists.txt  bloom-shader.hpp  context.hpp  drifter.hpp  effect-base.hpp  exploder.cpp  exploder.hpp  follower-base.cpp  follower-base.hpp  follower.hpp  game.cpp  game.hpp  gravity-bouncer.cpp  gravity-bouncer.hpp  main.cpp  mouse-follower.cpp  mouse-follower.hpp  movement.cpp  movement.hpp  mover-factory.hpp  notes.txt  particle-emitter.cpp  particle-emitter.hpp  random.hpp  resources.hpp  rising-fade.cpp  rising-fade.hpp  sound-player.cpp  sound-player.hpp  status-text.cpp  status-text.hpp  steady-mover.hpp  trippy-mushroom.hpp  util.hpp  wall-bouncer.cpp  wall-bouncer.hpp
snow/: CMakeLists.txt  main.cpp  math-constants.hpp  util.hpp
(+11 files in other folders)
